# xn_voice_wake_up

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.kiro/specs/voice-wake-word/: design.md  picovoice-porcupine-guide.md  requirements.md  tasks.md  wake-word-training-guide.md
components/xn_audio_manager/: CMakeLists.txt  idf_component.yml
components/xn_audio_manager/include/: afe_wrapper.h  audio_bsp.h  audio_manager.h  button_handler.h  i2s_hal.h  playback_controller.h  ring_buffer.h
components/xn_audio_manager/src/: afe_wrapper.c  audio_bsp.c  audio_manager.c  button_handler.c  i2s_hal.c  playback_controller.c  ring_buffer.c
components/xn_cloud_audio/: CMakeLists.txt  idf_component.yml
components/xn_cloud_audio/include/: cloud_audio.h
components/xn_cloud_audio/src/: cloud_audio.c
components/xn_ota_manager/: CMakeLists.txt
components/xn_ota_manager/include/: http_client_module.h  http_ota_manager.h
components/xn_ota_manager/src/: http_client_module.c
components/xn_ota_manger/: CMakeLists.txt  Kconfig
components/xn_ota_manger/include/: http_ota_module.h  xn_ota_manage.h
components/xn_ota_manger/src/: http_ota_manager.c  http_ota_module.c  xn_ota_manage.c
components/xn_voice_wake/: CMakeLists.txt
components/xn_voice_wake/edge-impulse-sdk/porting/espressif/: ei_classifier_porting.cpp
components/xn_voice_wake/include/: audio_processor.h  detection_engine.h  voice_wake_module.h
components/xn_voice_wake/model-parameters/: model_metadata.h  model_variables.h
components/xn_voice_wake/src/: audio_processor.c  detection_engine.cpp  ei_porting.cpp  voice_wake_module.c
components/xn_voice_wake/tflite-model/: tflite_learn_863593_6_compiled.cpp  tflite_learn_863593_6_compiled.h  tflite_learn_863593_8_compiled.cpp  tflite_learn_863593_8_compiled.h
components/xn_web_wifi_manger/src/: web_module.c  xn_wifi_manage.c
doc/: funasr-kws-deploy.md  funasr_kws_server.py  generate_negative.py  generate_noise.py  generate_wake_word.py  server.py  voice-wake-server-deploy.md
doc/xingnian-project-1-cpp-mcu-v1/: README.txt
doc/xingnian-project-1-cpp-mcu-v1/model-parameters/: model_metadata.h  model_variables.h
main/: CMakeLists.txt  main.c
main/audio_app/: audio_config_app.c  audio_config_app.h
ota_server/: FirmwareAPI.php  README_bt_ota_server.md  index.php
ota_server/firmware/: version.json
